Adding SPI Communication Protocol Driver

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,8 @@
         "dma_interface.h": "c",
         "stp_interface.h": "c",
         "stp_config.h": "c",
-        "stp_private.h": "c"
+        "stp_private.h": "c",
+        "spi_config.h": "c"
     },
     "cSpell.words": [
         "CALIB",
